Bug 130165 - FILESAVE PPTX Parent master slide is set instead of child at save
Summary: FILESAVE PPTX Parent master slide is set instead of child at save
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: filter:pptx
Depends on:
Blocks: PPTX-MasterSlide
  Show dependency treegraph
 
Reported: 2020-01-24 08:20 UTC by NISZ LibreOffice Team
Modified: 2022-02-14 07:28 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from PowerPoint (273.62 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-01-24 08:20 UTC, NISZ LibreOffice Team
Details
The original file saved by Impress (201.45 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-01-24 08:22 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in PowerPoint (107.52 KB, image/png)
2020-01-24 08:23 UTC, NISZ LibreOffice Team
Details
Master slide view of the original document side by side in Impress and PowerPoint (209.49 KB, image/png)
2020-01-24 08:23 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-24 08:20:41 UTC
Created attachment 157385 [details]
Example file from PowerPoint

Attached user made PPTX has a custom master slide with two child master slides, one of them being used in the slide. This is displayed correctly on opening the file in Impress.
After saving the file in Impress the master slide is set as the template of the slide instead of the child master slide.

Steps to reproduce:
    1. Open attached file and save it as PPTX

Actual results:
The master slide is changed under the first slide of the presentation, with blue header image and different images in the bottom left and bottom right corners. This is the parent master slide of the originally used master slide.

Expected results:
Same master slide saved as in the original.

LibreOffice details:
Version: 6.5.0.0.alpha0+ (x64)
Build ID: c7f3ac890526306804ec2bdf1256ba15a4247f13
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: en-US (hu_HU); UI-Language: en-US
Calc: CL

Also happens in:
Verzió: 6.0.0.3
Build az.: 64a0f66915f38c6217de274f0aa8e15618924765
CPU szálak: 4; OS: Windows 6.3; Felületmegjelenítés: alapértelmezett; 
Területi beállítások: hu-HU (hu_HU); Calc: CL

Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)

Verzió: 4.0.0.3 (Build az.: 7545bee9c2a0782548772a21bc84a9dcc583b89)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 1 NISZ LibreOffice Team 2020-01-24 08:22:41 UTC
Created attachment 157386 [details]
The original file saved by Impress
Comment 2 NISZ LibreOffice Team 2020-01-24 08:23:27 UTC
Created attachment 157387 [details]
Screenshot of the original and exported document side by side in PowerPoint
Comment 3 NISZ LibreOffice Team 2020-01-24 08:23:56 UTC
Created attachment 157388 [details]
Master slide view of the original document side by side in Impress and PowerPoint
Comment 4 Xisco Faulí 2020-01-24 11:01:30 UTC
Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 5fd05b2d4a61af0e72cf75f465c4f6ad7b2f4cc9
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Steps are wrong in description:
1. Open attachment 157385 [details]
2. Save it as PPTX
3. Open it again

-> Blue background + footer objects are displayed
Comment 5 Commit Notification 2022-01-31 16:07:08 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1865ecd67a4ea791ac24e3234d4ad3d2be9d1e3

tdf#130165 PPTX export: fix master objects visible property

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-02-01 09:59:30 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/554b01c9f91fcc6d8c188ef3dc511b4d9c18b7e7

tdf#130165 PPTX export: fix master objects visible property

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-02-14 07:28:53 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 42c5506a9e9ef58efd8193a193464e3b49d481ca
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded