tdf#130165 PPTX export: fix master objects visible property

Follow-up to commit 4574a1ea408c2ac30042dca32d02207ec7add4da
"tdf#146223 PPTX import: fix master objects visible property".

Change-Id: I34e6132837d6c84974f8446978c59226a9a7d2d7